# noio_db

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENCE  README.md  TODO.md  mkdocs.yml  orm_object.py  requirements.txt  setup.cfg  sql_object_factories.py  sql_query_constructors.py  tox.ini
.github/workflows/: lint.yml  test.yml
core/: __init__.py  sql_object_factories.py  sql_objects.py  sql_query_constructors.py
core/ast/: ast.py
noio_db/: __init__.py  settings.py
noio_db/core/: __init__.py  abstract_syntax_tree.py  sql_query_constructors.py
noio_db/core/ast/: ast.py
noio_db/core/db_drivers/: __init__.py  base_driver.py  sqlite_driver.py
noio_db/core/sql_object_factories/: __init__.py  abstract_sql_object_factory.py  alter_table_sql_object_factory.py  conditioned_sql_object_factories.py  create_sql_object_factory.py  delete_sql_object_factory.py  for_sql_object_factory.py  insert_sql_object_factory.py  mul_arg_sql_object_factories.py  pair_op_sql_object_factories.py  update_sql_object_factory.py
noio_db/core/sql_objects/: __init__.py  alter.py  base.py  create.py  delete.py  insert.py  select.py  update.py  utils.py
noio_db/migrations/: migration_manager.py
noio_db/models/: fields.py  model.py
noio_db/query/: __init__.py  query.py
noio_db/utils/: __init__.py  arg_manipulation.py  async_decorator.py  consts.py  get_settings.py  mappings.py  mixins.py
query/: query.py
src/noio_db/: __init__.py
src/noio_db/core/: sql_query_constructors.py
tests/: test_construct_from_templates.py
tests/e2e/: conftest.py
(+27 files in other folders)
