[metadata]
name = noio_db
description = No I/O ORM for the future
author = Anton Rumyantsev
license = MIT
license_file = LICENCE
platforms = unix, linux, osx, cygwin, win32
classifiles =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    noio_db
install_requires =
    pydantic>=1
python_requires =
    >=3.9
package_dir =
    =src
zip_safe = no